# arxiv2026-hierarchical-latent-structures

./: .gitignore  ABOUT_THIS_TEMPLATE.md  NOTICE.txt  README.md  mkdocs.yml  pyproject.toml  setup.py
.github/: rename_project.sh
analysis/: data_loader.py  function_vectors.ipynb  hydra_effect.py  induction_heads.ipynb  plot_helpers.py  plot_hydra_effect.ipynb  structure_analysis.ipynb  training_losses.ipynb
arxiv2026_hierarchical_latent_structures/: __main__.py  cli.py
configs/: ngram.yml  pcfg.yml
corpus_generator/: .gitignore  Cargo.toml  clippy.toml
corpus_generator/src/: arrow_writer.rs  lib.rs  main.rs  tokenizer.rs
corpus_generator/src/config/: mod.rs  ngram.rs
corpus_generator/src/language/: mod.rs  ngram.rs  pcfg.rs
corpus_generator/tests/: bigram_validation_test.rs  test_languages.rs
docs/: index.md
olmo_evaluation/: multi_gpu_entry.py
olmo_evaluation/evaluators/: hydra_effect.py  induction_heads.py
olmo_evaluation/prerequisites/: download_checkpoints.py  download_paloma.py  download_wandb_log.py
tests/: test_base.py
training_pipeline/: entry.py  runner.py
training_pipeline/configs/: __init__.py  experiment_config.py  model_config.py  runner_config.py
training_pipeline/utils/: __init__.py  aim_gpu_filter.py  arrow_loader.py  checkpoint_manager.py  duration.py  evaluator_factory.py  logger.py  model_factory.py  model_utils.py  trainer_factory.py  training_loss_logger.py
