[project]
name = "hierarchical-latent-structures"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "accelerate>=1.6.0",
    "aim>=3.29.1",
    "datasets>=3.6.0",
    "graphviz>=0.20.3",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "nbformat>=5.10.4",
    "nnsight",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "rich>=14.0.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "tiktoken>=0.9.0",
    "pendulum>=3.1.0",
    "torch>=2.6.0",
    "pyyaml>=6.0",
    "transformers>=4.51.3",
    "colorama>=0.4.6",
    "requests>=2.32.0",
    "pytest>=8.4.0",
    "pytest-benchmark>=5.1.0",
    "typer>=0.16.0",
    "joblib>=1.5.1",
    "glances[gpu]>=4.3.1",
    "huggingface-hub[hf-xet]>=0.33.2",
    "jupyterlab>=4.4.7",
    "notebook>=7.4.5",
    "wandb>=0.22.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["training_pipeline", "corpus_generator"]

[dependency-groups]
dev = [

    "ruff>=0.11.13",
]

[project.scripts]
experiment = "training_pipeline.entry:app"
