[package]
name = "generator"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.1"
rayon = "1.10.0"
ahash = "0.8"
dashmap = "6.1.0"
serde = { version = "1.0.219", features = ["derive"] }
rand_distr = "0.5.1"
serde_json = "1.0.140"
anyhow = "1.0.98"
chrono = "0.4.41"
arrow = { version = "54", features = ["ipc"] }
nalgebra = "0.34.0"
mimalloc = { version = "0.1", default-features = false }
indicatif = "0.17"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"